# udondo-chatbot

./: .gitignore  README.md
langchain-book/: errata.md
langchain-book/chapter3/: notebook.ipynb  requirements.txt
langchain-book/chapter4/: notebook.ipynb  requirements.txt
langchain-book/chapter5/: notebook.ipynb  requirements.txt
langchain-book/chapter6/: app.py  requirements.txt
langchain-book/chapter7/: requirements.txt
langchain-book/chapter8/: app.py  requirements.txt
udondo-chatbot/: .env.local  .gitignore  README.md  knowledge.csv  package-lock.json  package.json  vercel.json
udondo-chatbot/api/: index.py
udondo-chatbot/app/: layout.tsx  page.tsx
udondo-chatbot/backend/: pyproject.toml
udondo-chatbot/backend/data/: knowledge_base.json
udondo-chatbot/backend/scripts/: generate_embeddings.py
udondo-chatbot/backend/src/: main.py
udondo-chatbot/backend/src/api/: dependencies.py
udondo-chatbot/backend/src/api/v1/: chat.py
udondo-chatbot/backend/src/application/: chat_service.py
udondo-chatbot/backend/src/core/: config.py  security.py
udondo-chatbot/backend/src/domain/interfaces/: chat_log_port.py  llm_port.py  retriever_port.py
udondo-chatbot/backend/src/domain/models/: chat_log.py  message.py
udondo-chatbot/backend/src/infrastructure/llm/: gemini_adapter.py
udondo-chatbot/backend/src/infrastructure/supabase/: supabase_chat_log_adapter.py  supabase_knowledge_retriever.py
udondo-chatbot/components/: planet-guide-chat.tsx
udondo-chatbot/frontend/: next.config.ts  package-lock.json  package.json  requirements.txt  vercel.json
(+53 files in other folders)
